Refactored AbstractMenu, WinAndUpgradeMenu and MenuOption
Now we can have dynamic description and subtitles